{
  "version": 4,
  "terraform_version": "0.13.1",
  "serial": 20,
  "lineage": "d9bdb40c-21e7-6373-588c-fed9f2bc03a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:797419036028:internet-gateway/igw-039e8a27d72ebc669",
            "id": "igw-039e8a27d72ebc669",
            "owner_id": "797419036028",
            "tags": {
              "Name": "Elasticsearch and RDP sample Internet Gateway"
            },
            "vpc_id": "vpc-0fe036144350ea08b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-037dacf9b74e38715",
            "owner_id": "797419036028",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-039e8a27d72ebc669",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Elasticsearch and RDP sample Route table"
            },
            "vpc_id": "vpc-0fe036144350ea08b"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e967895ee75e97f5",
            "route_table_id": "rtb-037dacf9b74e38715",
            "subnet_id": "subnet-0a7143eea7a4ed1e7"
          },
          "dependencies": [
            "aws_route_table.main",
            "aws_subnet.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticsearch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:797419036028:security-group/sg-091911753bdc4dc0e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-091911753bdc4dc0e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-000bbe020220147a6"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "elasticsearch",
            "name_prefix": "",
            "owner_id": "797419036028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Elasticsearch"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe036144350ea08b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:797419036028:security-group/sg-000bbe020220147a6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-000bbe020220147a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "202.221.138.185/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "rdp",
            "name_prefix": "",
            "owner_id": "797419036028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe036144350ea08b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "connect_to_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "202.221.138.185/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1102236484",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000bbe020220147a6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.rdp",
            "data.http.ifconfig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rdp_to_es",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1159981228",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-091911753bdc4dc0e",
            "self": false,
            "source_security_group_id": "sg-000bbe020220147a6",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.elasticsearch",
            "aws_security_group.rdp",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:797419036028:subnet/subnet-0a7143eea7a4ed1e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "12.0.1.0/24",
            "id": "subnet-0a7143eea7a4ed1e7",
            "map_public_ip_on_launch": false,
            "owner_id": "797419036028",
            "tags": {
              "Name": "Elasticsearch and RDP sample Subnet"
            },
            "vpc_id": "vpc-0fe036144350ea08b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:797419036028:vpc/vpc-0fe036144350ea08b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-028240145552a4286",
            "default_route_table_id": "rtb-037dacf9b74e38715",
            "default_security_group_id": "sg-092a1b89acb235988",
            "dhcp_options_id": "dopt-6f490a08",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fe036144350ea08b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-037dacf9b74e38715",
            "owner_id": "797419036028",
            "tags": {
              "Name": "Elasticsearch and RDP sample VPC"
            }
          }
        }
      ]
    }
  ]
}